[package]
name = "yew-aria-widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"

[dev-dependencies]
wasm-bindgen = "0.2.0"
wasm-bindgen-test = "0.3.0"
web-sys = { version = "0.3.0", features = ["HtmlCollection"] }
